Added low stock message queue, and updated the readme and inventory-design.md